support re-run existing generator
