# docs/swagger.json
@@ -192,7 +192,7 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": ""
                     },
                     "404": {
@@ -259,7 +259,7 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": ""
                     },
                     "404": {
